src/objects/Project_Details__c.object
<CustomObject>
    <fields>
        <fullName>Level_Change_Reason__c</fullName>
        <label>Level Change Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10+ TIN’s (tied to same contract)</fullName>
                </value>
                <value>
                    <fullName>10 or more GD’s</fullName>
                </value>
                <value>
                    <fullName>500+ claims require reconsideration</fullName>
                </value>
                <value>
                    <fullName>500+  impacted procedure codes</fullName>
                </value>
                <value>
                    <fullName>A.C.N. Referral for contract validation</fullName>
                </value>
                <value>
                    <fullName>Aged Justification</fullName>
                </value>
                <value>
                    <fullName>BCCI Referrals (M&amp;R), Benefit Config referrals</fullName>
                </value>
                <value>
                    <fullName>Beacon Projects</fullName>
                </value>
                <value>
                    <fullName>C&amp;S Benefit Config projects impacting multiple providers</fullName>
                </value>
                <value>
                    <fullName>CES Referrals (M&amp;R)</fullName>
                </value>
                <value>
                    <fullName>Claim by claim review (50+)</fullName>
                </value>
                <value>
                    <fullName>Confirmation of Overpay</fullName>
                </value>
                <value>
                    <fullName>CPM Leadership Exception</fullName>
                </value>
                <value>
                    <fullName>DSS, National Project</fullName>
                </value>
                <value>
                    <fullName>EDI referrals</fullName>
                </value>
                <value>
                    <fullName>Exception Delay</fullName>
                </value>
                <value>
                    <fullName>Extended Root Cause Review</fullName>
                </value>
                <value>
                    <fullName>External Pricing</fullName>
                </value>
                <value>
                    <fullName>Galaxy Load Delay</fullName>
                </value>
                <value>
                    <fullName>HV Report Scrub</fullName>
                </value>
                <value>
                    <fullName>MARS Program Review</fullName>
                </value>
                <value>
                    <fullName>NQ report pulls</fullName>
                </value>
                <value>
                    <fullName>Numara</fullName>
                </value>
                <value>
                    <fullName>Provider contract review of more than 50 providers</fullName>
                </value>
                <value>
                    <fullName>Provider Pick referrals</fullName>
                </value>
                <value>
                    <fullName>Provider Spreadsheet</fullName>
                </value>
                <value>
                    <fullName>Referrals regarding contract validation</fullName>
                </value>
                <value>
                    <fullName>Roster Request</fullName>
                </value>
                <value>
                    <fullName>RPU2U referrals</fullName>
                </value>
                <value>
                    <fullName>Single TIN with more than 50 physicians</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <description>CPM Line of Business</description>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>E&amp;I</fullName>
                </value>
                <value>
                    <fullName>C&amp;S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>M_R_Non_Par_Re_Open__c</fullName>
        <label>M&amp;R - Non Par Re-Open</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Adjust_Claims__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Non-Adjusted Claims</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Claims_Sent_to_Re_Review__c</fullName>
        <label>Number of Claims Sent to Re-Review</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Paid_Amount__c</fullName>
        <inlineHelpText>This field represents the original paid amount at claim level, NOT a detail line level</inlineHelpText>
        <label>Original Paid Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_Escalation_Reason__c</fullName>
        <label>Escalation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Formal Complaints</fullName>
                </value>
                <value>
                    <fullName>Executive or Senior Leadership Directive</fullName>
                </value>
                <value>
                    <fullName>Provider sends Intent to Term Letter</fullName>
                </value>
                <value>
                    <fullName>Market Implosion</fullName>
                </value>
                <value>
                    <fullName>Media Threat</fullName>
                </value>
                <value>
                    <fullName>Financial Hardship</fullName>
                </value>
                <value>
                    <fullName>Provider refusing to treat members</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PHS_Additional_Dollars_Paid__c</fullName>
        <label>PHS - Additional Dollars Paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PHS_Provider_Dispute__c</fullName>
        <label>PHS - Provider Dispute</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Case__c</fullName>
        <label>Parent Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Provider_Claims</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Processing_Forms__c</fullName>
        <inlineHelpText>This field reflects how many CPM Forms are in Open or Pending status.</inlineHelpText>
        <label>Processing Forms</label>
        <summaryFilterItems>
            <field>Claim_Impact_Report_Form__c.Status__c</field>
            <operation>equals</operation>
            <value>Open, Pending</value>
        </summaryFilterItems>
        <summaryForeignKey>Claim_Impact_Report_Form__c.Project_Details__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project_Contact_Notified__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Project Contact Notified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Escalated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Outcome__c</fullName>
        <label>Project Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Correct</fullName>
                </value>
                <value>
                    <fullName>Re-review - CPM initiated</fullName>
                </value>
                <value>
                    <fullName>Re-review - Project Contact initiated</fullName>
                </value>
                <value>
                    <fullName>Re-review</fullName>
                    <isActive>false</isActive>
                    <label>Re-review</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Re_Open_Medicare_NonPar_Providers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-Open (Medicare Non-Par Providers)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Re_Review_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Re-Review Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Re_Review_Non_Adjust_Claims__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Re-Review Non-Adjusted Claims</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Re_Review_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Re-Review Submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Re_review_Adjust_Claims__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Re-Review Adjusted Claims</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>confirmation the issue has been resolved, and how CPM determined the issue was resolved</inlineHelpText>
        <label>Resolution</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_From__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Response From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_to_Interest_Question__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Response to Interest Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Returned_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PICT/CRT Return</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Root_Cause_1_Key_Code__c</fullName>
        <description>this field will store the root cause 1 Key Code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Root Cause 1 Key Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause_1__c</fullName>
        <description>this field will store the root cause 1 value</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Root Cause 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause_2_Key_Code__c</fullName>
        <description>this field will store the root cause 2 Key Code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Root Cause 2 Key Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause_2__c</fullName>
        <description>this field will store the root cause 2 value</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Root Cause 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause_3_Key_Code__c</fullName>
        <description>this field will store the root cause 3 Key Code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Root Cause 3 Key Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause_3__c</fullName>
        <description>this field will store the root cause 3 value</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Root Cause 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <label>Root Cause</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C&amp;S - Optum Sanction/SIU/Clinical Review Related</fullName>
                </value>
                <value>
                    <fullName>CLIA</fullName>
                </value>
                <value>
                    <fullName>Corrected Claim Not Managed Correctly</fullName>
                </value>
                <value>
                    <fullName>CPM Created in Error</fullName>
                </value>
                <value>
                    <fullName>Duplicate Referral</fullName>
                </value>
                <value>
                    <fullName>ICD 10 Remediation  - set up error</fullName>
                </value>
                <value>
                    <fullName>IRL-CAH/PPHS-FQHC</fullName>
                </value>
                <value>
                    <fullName>Medicaid/Medicare Benefit/System Config. Update</fullName>
                </value>
                <value>
                    <fullName>Medicaid Disclosure</fullName>
                </value>
                <value>
                    <fullName>Medicaid – Eligibility</fullName>
                </value>
                <value>
                    <fullName>Misc – Contract Not System Administrable</fullName>
                </value>
                <value>
                    <fullName>Misc – ICESLogic</fullName>
                </value>
                <value>
                    <fullName>Misc – Notification/Authorization Issues</fullName>
                </value>
                <value>
                    <fullName>Misc – PI or SOP Update</fullName>
                </value>
                <value>
                    <fullName>Misc – Processor Error</fullName>
                </value>
                <value>
                    <fullName>Misc – Provider billing issue</fullName>
                </value>
                <value>
                    <fullName>Misc – Provider Selection error</fullName>
                </value>
                <value>
                    <fullName>Misc – Reimbursement Policy</fullName>
                </value>
                <value>
                    <fullName>Misc – Retro Member Driven</fullName>
                </value>
                <value>
                    <fullName>Misc – System Limitation, Problem, EDI, SOS, other</fullName>
                </value>
                <value>
                    <fullName>Misrouted to CPM</fullName>
                </value>
                <value>
                    <fullName>Out of Scope</fullName>
                </value>
                <value>
                    <fullName>OXF/UHC West - Additional Info Received</fullName>
                </value>
                <value>
                    <fullName>Oxf – Balance Bill</fullName>
                </value>
                <value>
                    <fullName>Oxf – Corrected Claim</fullName>
                </value>
                <value>
                    <fullName>Oxf – Intelliclaim</fullName>
                </value>
                <value>
                    <fullName>R00 – prv grp less than 10 update less than 30 days</fullName>
                </value>
                <value>
                    <fullName>R01A – Contractor did not follow submission policy resulting in a retro load</fullName>
                </value>
                <value>
                    <fullName>R01B – Contractor did not follow submission policy resulting in a retro load – No Claim Impact.</fullName>
                </value>
                <value>
                    <fullName>R01C – Untimely/Late Submission – claim impact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Root_cause_findings__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>What was the problem, what was the solution and is the system set up to operate as it should</inlineHelpText>
        <label>Root cause findings</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Self_Insured_Claim_Volume__c</fullName>
        <description>Self-Insured Claim Volume</description>
        <inlineHelpText>E&amp;I/Oxford Only</inlineHelpText>
        <label>Self-Insured Claim Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Single_Adjust_Submission__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Single Adjust Submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Single_Adjustment_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Single Adjustment ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Single_overpayment_letter_tracking_EnI__c</fullName>
        <label>E&amp;I - Single Overpayment Letter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date_Change_Reason__c</fullName>
        <label>Start Date Change Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CPM Leadership Approval</fullName>
                </value>
                <value>
                    <fullName>Corrections not in place</fullName>
                </value>
                <value>
                    <fullName>External Report/Pricing delay</fullName>
                </value>
                <value>
                    <fullName>Missing information – Internal Submitter</fullName>
                </value>
                <value>
                    <fullName>Missing information – Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_of_Impact__c</fullName>
        <description>CPM State of Impact</description>
        <inlineHelpText>For M&amp;R only</inlineHelpText>
        <label>State of Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submission_Area__c</fullName>
        <label>Submission Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CRT</fullName>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subtype</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Validation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>What application AND claim platform screens were reviewed to validate the system set up</inlineHelpText>
        <label>System Validation</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>System_updated_prior_to_submission__c</fullName>
        <label>System Updated Prior to Submission?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Due_Date__c</fullName>
        <label>Target Due Date?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Topic</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Billed_Charges__c</fullName>
        <label>Total Billed Charges</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Exception__c</fullName>
        <label>Exception Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract Exception</fullName>
                </value>
                <value>
                    <fullName>Processing Exception</fullName>
                </value>
                <value>
                    <fullName>Provider Administrative Exception</fullName>
                </value>
                <value>
                    <fullName>Reimbursement Policy Exception</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UHC_West_NICE_Additional_Dollars_Paid__c</fullName>
        <description>Additional dollars paid for UHC West - NICE LOB</description>
        <label>UHC West - NICE -Additional Dollars Paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UHC_West_NICE_Provider_Dispute__c</fullName>
        <label>UHC West - NICE - Provider Dispute</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Update_Information__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If there was an update, what area completed the update, what was the update, when was it effective and when was it completed</inlineHelpText>
        <label>Update Information</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Volume_of_Claims_on_Project__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Volume of Claims on Project</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume_of_Claims_on_Re_Review__c</fullName>
        <label>Volume of Claims on Re-Review</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Workbook_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Workbook Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Workbook_Source__c</fullName>
        <label>Workbook Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sent_for_Re_Review__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label># sent for Re-Review</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>CPM Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Follow_up_field_selected</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Follow_Up__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Follow-up field selected</label>
    </listViews>
    <nameField>
        <displayFormat>PJD-{000000000}</displayFormat>
        <label>CPM Project Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPM Projects</pluralLabel>
    <recordTypes>
        <fullName>CPM</fullName>
        <active>true</active>
        <description>Provider claims for Central Provider Management</description>
        <label>CPM</label>
    </recordTypes>
    <recordTypes>
        <fullName>CPM_Cloned</fullName>
        <active>true</active>
        <description>This record type is used for differentiating layout for cloned case.</description>
        <label>CPM Cloned</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_More_than_one_Provider_Claim</fullName>
        <active>false</active>
        <description>User must not create more than one provider claim for one case</description>
        <errorConditionFormula>AND(ISNEW(), Parent_Case__r.Count_of_Provider_Claim__c  &gt; 0)</errorConditionFormula>
        <errorMessage>You cannot create multiple provider claim for one case</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Status_is_close</fullName>
        <active>true</active>
        <description>Required when Case Status is changed to Close.</description>
        <errorConditionFormula>AND(ISPICKVAL( Case_Status__c , &apos;Closed&apos;), ISPICKVAL(Root_Cause__c,&apos;&apos;))</errorConditionFormula>
        <errorMessage>Enter the Root Cause to close the CPM project</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_if_E_I_Aged_Overpayment_is_Yes</fullName>
        <active>true</active>
        <description>Required if field E&amp;I - Aged Overpayments is yes</description>
        <errorConditionFormula>And( ISPICKVAL( E_I_Aged_Operpayments__c ,&apos;Yes&apos;), ISBLANK(E_I_Aged_Overpay_Approval__c))</errorConditionFormula>
        <errorDisplayField>E_I_Aged_Overpay_Approval__c</errorDisplayField>
        <errorMessage>Please Enter E&amp;I - Aged Overpay Approval</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_if_E_I_Singl_Overpayment_is_Yes</fullName>
        <active>true</active>
        <description>Required if field E&amp;I - Single Overpayment Letter yes.</description>
        <errorConditionFormula>And( ISPICKVAL( Single_overpayment_letter_tracking_EnI__c,&apos;Yes&apos;), ISBLANK(E_I_Single_Overpay_Letter_Approval__c))</errorConditionFormula>
        <errorDisplayField>E_I_Single_Overpay_Letter_Approval__c</errorDisplayField>
        <errorMessage>Please Enter E&amp;I - Single Overpay Letter Approval</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_if_Target_Due_Date_selected_Yes</fullName>
        <active>true</active>
        <description>Required if Target Due Date selected</description>
        <errorConditionFormula>And( ISPICKVAL( Target_Due_Date__c,&apos;Yes&apos;), ISBLANK(Target_Date__c))</errorConditionFormula>
        <errorDisplayField>Target_Date__c</errorDisplayField>
        <errorMessage>Please Enter Target Date</errorMessage>
    </validationRules>
</CustomObject>